--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ input[type="password"],
 input[type="number"],
 input[type="tel"],
 textarea,
-select {
+select{
 
 	-webkit-transition: color .3s ease-in, border-color .3s ease-in, background-color .3s ease-in, opacity .3s ease-in;
 	-moz-transition: color .3s ease-in, border-color .3s ease-in, background-color .3s ease-in, opacity .3s ease-in;
@@ -70,12 +70,12 @@ textarea {
 	background: url("../asset/bd_strips.png"), #c5c5c8;
 	background-size: cover;
 	position: relative;
-	min-width-width: 700px;
+	min-width: 700px;
 }
 .ba-card{
 	border-radius: 10px;
 	background-color:  #111a28;
-	box-shadow: 0px 0px 65px 0px rgba(0, 0, 0, 0.82);
+	box-shadow: 0 0 65px 0 rgba(0, 0, 0, 0.82);
 	width: 686px;
 	height: 391px;
 	position: absolute;
@@ -148,19 +148,22 @@ textarea {
 	opacity: 16;
 }
 .ba-form_button{
-	padding:10px 14px;
+	width: 69px;
+	height: 32px;
 	border: 1px solid rgba(255, 255, 255, 0.26);
 	margin-bottom:29px;
-
+	padding: 0 9px;
+	background: url("../asset/marker.png") #111a28 no-repeat;
+	background-position:  47px 14px;
+	-webkit-appearance: none;
 }
-.ba-form_button:not(.ba-form_button--added):after{
-	content: url("../asset/marker.png");
-	margin-left: 10px;
+
+option:first-child{
+	display: none;
 }
 .ba-form_button--added{
 	width: 182px;
+	height: 38px;
+	background: #4c525a;
 }
-.ba-form_button:hover,
-.ba-form_button--selected{
-	background: rgba(255, 255, 255, 0.1);
-}
+
